--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -6,11 +6,52 @@ body {
   /*height: 100%;*/
   background: #ddd;
   padding-bottom: 100px;
+  /*position: relative;*/
 }
 
-/*.container, .ng-scope {*/
-  /*height: 100%;*/
-/*}*/
+.centerY {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+.centerX {
+  /*position: absolute;*/
+  /*right: 50%;*/
+  /*-webkit-transform: translateX(-50%);*/
+  /*-moz-transform: translateX(-50%);*/
+  /*-ms-transform: translateX(-50%);*/
+  /*-o-transform: translateX(-50%);*/
+  /*transform: translateX(-50%);*/
+  width: 100%;
+  margin: 0 auto;
+}
+
+.centerX-absolute {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+}
+
+.card {
+  box-shadow: 0px 2px 4px #999;
+  background-color: white;
+  padding: 10px 30px;
+}
+
+.highlight:hover,
+.highlight:focus {
+  transition: background-color 0.5s ease;
+  background-color: rgb(0, 196, 183);
+  cursor: pointer;
+  cursor: hand;
+}
 
 .fundo-verde {
   background-color: rgb(0, 167, 156);
@@ -24,13 +65,14 @@ body {
   color: rgb(0, 167, 156);
 }
 
-.center {
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  bottom: 0px;
-  left: 0px;
+textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus {
+  /*border: 1px solid rgba(23, 103, 229, 0.8);*/
+  /*box-shadow: 0 1px 1px rgba(23, 103, 229, 0.075) inset, 0 0 8px rgba(23, 103, 229, 0.6);*/
+  /*outline: 1px solid rgb(0, 167, 156);*/
+  border: 1px solid rgb(0, 167, 156);
 }
+
+/****************** HEADER ******************/
 
 .banner {
   background-image: url('../images/logotipo.png');
@@ -47,7 +89,7 @@ body {
   border: none;
   border-radius: 0px;
   font-size: 1.2em;
-  box-shadow: 0px 2px 4px #ccc;
+  box-shadow: 0px 2px 4px #999;
 }
 
 .navbar-default .navbar-nav {
@@ -96,25 +138,111 @@ body {
   margin-top: 40px;
 }*/
 
-.card {
-  box-shadow: 0px 2px 4px #ccc;
-  background-color: white;
-  padding: 10px 30px;
+/****************** LOGIN ******************/
+
+#login {
+    width: 340px;
+    height: 320px;
+    text-align: center;
+    margin: auto;
+    display: block;
+    position: relative;
 }
 
-.menuHighlight :hover,
-.menuHighlight :focus {
-  /*transition: background-color 0.5s ease;*/
-  background-color: rgb(0, 196, 183);
-  cursor: pointer;
-  cursor: hand;
+#login input {
+    width: 100%;
+    height: 50px;
+    font-size: 1.4em;
+    padding: 10px;
+    z-index: 1;
 }
 
-textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus {
-  /*border: 1px solid rgba(23, 103, 229, 0.8);*/
-  /*box-shadow: 0 1px 1px rgba(23, 103, 229, 0.075) inset, 0 0 8px rgba(23, 103, 229, 0.6);*/
-  outline: 1px solid rgb(0, 167, 156);
+#login #usuario {
+    border: 1px solid #ccc;
+    -webkit-border-top-left-radius: 5px;
+    -webkit-border-top-right-radius: 5px;
+    -moz-border-radius-topleft: 5px;
+    -moz-border-radius-topright: 5px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    margin-top: 30px;
 }
+
+#login #usuario:focus,
+#login #senha:focus {
+  border: 1px solid rgb(0, 167, 156);
+  z-index: 100;
+}
+
+#login #senha {
+    z-index: 1;
+    /*margin-top: -1px;*/
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    -webkit-border-bottom-right-radius: 5px;
+    -webkit-border-bottom-left-radius: 5px;
+    -moz-border-radius-bottomright: 5px;
+    -moz-border-radius-bottomleft: 5px;
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-top-width: 0px;
+}
+
+#login #btnlogin {
+    width: 100%;
+    margin-top: 10px;
+    font-size: 1.4em;
+    height: 50px;
+}
+
+#logoNomeLogin {
+    background-image: url('../images/logo_nome.png');
+    width: 100%;
+    height: 50px;
+    background-size: 20%;
+    background-repeat: no-repeat;
+    margin: 10px auto;
+    background-position: center;
+}
+
+#logoIconeLogin
+{
+  background-image: url('../images/logo_icone.png');
+  width: 50px;
+  height: 50px;
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  margin: 10px auto 0 auto;
+}
+
+/****************** HOME ******************/
+
+#menu-home {
+  padding: 30px;
+}
+
+.botao-menu {
+    margin: 14px 0;
+    width: 100%;
+    height: 200px;
+    text-align: center;
+    font-size: 2em;
+    position: relative;
+    box-shadow: 0px 2px 4px #999;
+}
+
+.botao-menu:hover {
+  top: -10px;
+  box-shadow: 0px 12px 14px #999;
+}
+
+.botao-menu span {
+    font-size: 2em;
+    margin-bottom: 40px;
+}
+
+/****************** ORCAMENTO ******************/
 
 .form-control:focus {
   box-shadow: none;
@@ -136,6 +264,8 @@ textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus {
   background-color: #67cfc8;
   color: white;
 }
+
+/****************** RESPONSIVO ******************/
 
 /* xs */
 
