minor bug fixes

--- a/app/views/orcamento.html
+++ b/app/views/orcamento.html
@@ -119,7 +119,7 @@
 
   <div class="row card">
     <div class="col-lg-4 col-md-4">
-      <div class="col-xs-3 col-sm-4">
+      <div class="col-xs-3 col-sm-2 col-md-4">
         <div><h4 class="fonte-verde">Vendedor</h4></div>
         <div class="input-group">
           <input type="text" class="form-control" placeholder="Cod" aria-describedby="basic-addon2">
@@ -128,7 +128,7 @@
           </span>
         </div>
       </div>
-      <div class="col-xs-9 col-sm-8">
+      <div class="col-xs-9 col-sm-10 col-md-8">
         <div><h4 class="fonte-verde">Nome</h4></div>
         <div>
           <input type="text" class="form-control" readonly="true" tabindex="-1">
