--- a/app/views/home.html
+++ b/app/views/home.html
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="col-md-12">
       <div class="col-sm-6 col-md-4" ng-repeat="botao in botoes">
-        <div class="botao-menu highlight fundo-verde fonte-branca" redireciona="{{botao.url}}">
+        <div class="botao-menu highlight" redireciona="{{botao.url}}">
           <div class="centerX centerY">
             <span class="glyphicon" ng-class="botao.icone"></span>
             <p>{{botao.nome}}</p>
