--- a/app/styles/_login.scss
+++ b/app/styles/_login.scss
@@ -1,3 +1,8 @@
+#titulo-login {
+  text-align: center;
+  color: #777;
+}
+
 #login {
 
   width: 340px;
@@ -15,51 +20,50 @@
     z-index: 1;
   }
 
-  #usuario {
-    border: 1px solid #ccc;
-    -webkit-border-top-left-radius: 5px;
-    -webkit-border-top-right-radius: 5px;
-    -moz-border-radius-topleft: 5px;
-    -moz-border-radius-topright: 5px;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-    margin-top: 30px;
-  }
+}
 
-  #senha {
-    z-index: 1;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
+#usuario {
+  border: 1px solid #ccc;
+  -webkit-border-top-left-radius: 5px;
+  -webkit-border-top-right-radius: 5px;
+  -moz-border-radius-topleft: 5px;
+  -moz-border-radius-topright: 5px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  margin-top: 30px;
+}
 
-  }
+#senha {
+  z-index: 1;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  -webkit-border-bottom-right-radius: 5px;
+  -webkit-border-bottom-left-radius: 5px;
+  -moz-border-radius-bottomright: 5px;
+  -moz-border-radius-bottomleft: 5px;
+  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 5px;
+  border-top-width: 0px;
+}
 
-  #usuario:focus, #senha:focus {
-    border: 1px solid $cor-principal;
-    z-index: 100;
-    -webkit-border-bottom-right-radius: 5px;
-    -webkit-border-bottom-left-radius: 5px;
-    -moz-border-radius-bottomright: 5px;
-    -moz-border-radius-bottomleft: 5px;
-    border-bottom-right-radius: 5px;
-    border-bottom-left-radius: 5px;
-    border-top-width: 0px;
-  }
+#usuario:focus, #senha:focus {
+  border: 1px solid $cor-principal;
+  z-index: 100;
+}
 
-  .btnlogin {
-    width: 100%;
-    margin-top: 10px;
-    font-size: 1.4em;
-    height: 50px;
-  }
+#btn-login {
+  width: 100%;
+  margin-top: 10px;
+  font-size: 1.4em;
+  height: 50px;
+}
 
-  #logoNomeLogin {
-    background-image: url('../images/logo_nome.png');
-    width: 100%;
-    height: 50px;
-    background-size: 20%;
-    background-repeat: no-repeat;
-    margin: 10px auto;
-    background-position: center;
-  }
-
+#logo-login {
+  background-image: url('../images/logo_nome.png');
+  width: 100%;
+  height: 50px;
+  background-size: 20%;
+  background-repeat: no-repeat;
+  margin: 10px auto;
+  background-position: center;
 }
