--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,7 +1,7 @@
 <div class="row">
-    <div style="text-align: center; color: #777;">
+    <div id="titulo-login">
         <alerta titulo="Aviso!" mensagem="main.erro" uib-collapse="main.erro"></alerta>
-        <div id="logoNomeLogin"></div>
+        <div id="logo-login"></div>
         <br>
         <h4>Digite seu nome de usuário e senha</h4>
         <br>
@@ -9,7 +9,7 @@
             <h1><span class="glyphicon glyphicon-user"></span></h1>
             <input type="text" id="usuario" placeholder="Usuário" ng-model="username">
             <input type="password" id="senha" placeholder="Senha" ng-model="password">
-            <button id="btnlogin" class="btn btn-default" ng-click="main.login()" >Login</button>
+            <button id="btn-login" class="btn btn-default" ng-click="main.login()" >Login</button>
         </div>
     </div>
 </div>
