--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -1,5 +1,5 @@
 .banner {
-  background-image: url('../images/logotipo.png');
+  //background-image: url('../images/logotipo.png');
   background-repeat: no-repeat;
   background-position: center;
   background-size: 300px;
@@ -16,9 +16,7 @@
   -moz-border-radius: 0px;
   border-radius: 0px;
   font-size: 1.2em;
-  -webkit-box-shadow: 0px 2px 4px #999;
-  -moz-box-shadow: 0px 2px 4px #999;
-  box-shadow: 0px 2px 4px #999;
+  @extend .sombra;
 
   .navbar-nav {
     float: none;
@@ -28,13 +26,13 @@
       display: inline-block;
       float: none;
 
-      a, a:hover {
+      a, a:hover, a:focus {
         color: white;
       }
     }
 
     li:hover {
-      background-color: $cor-highlight;
+      @extend .highlight;
     }
 
     .active {
