--- a/app/styles/_login.scss
+++ b/app/styles/_login.scss
@@ -59,7 +59,7 @@
 }
 
 #logo-login {
-  background-image: url('../images/logo_nome.png');
+  //background-image: url('../images/logo_nome.png');
   width: 100%;
   height: 50px;
   background-size: 20%;
