--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -22,18 +22,31 @@ body {
   bottom: 0px;
   left: 0px; }
 
-.card {
+.highlight, .navbar-default .navbar-nav li:hover, .botao-menu:hover {
+  -webkit-transition: background-color 0.5s ease;
+  -moz-transition: background-color 0.5s ease;
+  -ms-transition: background-color 0.5s ease;
+  -o-transition: background-color 0.5s ease;
+  transition: background-color 0.5s ease;
+  background-color: #29487d;
+  cursor: pointer;
+  cursor: hand; }
+
+.sombra, .card, .navbar-default, .botao-menu {
   -webkit-box-shadow: 0px 2px 4px #999;
   -moz-box-shadow: 0px 2px 4px #999;
-  box-shadow: 0px 2px 4px #999;
+  box-shadow: 0px 2px 4px #999; }
+
+.card {
   background-color: white;
   padding: 10px 30px; }
 
-textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus {
-  border: 1px solid #00a79c; }
+textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus, .btn:focus, .btn:active:focus {
+  outline: none;
+  border: 1px solid #3b5998;
+  box-shadow: 0 0 6px #3b5998; }
 
 .banner {
-  background-image: url("../images/logotipo.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: 300px;
@@ -42,25 +55,20 @@ textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus {
   background-color: white; }
 
 .navbar-default {
-  background-color: #00a79c;
+  background-color: #3b5998;
   border: none;
   -webkit-border-radius: 0px;
   -moz-border-radius: 0px;
   border-radius: 0px;
-  font-size: 1.2em;
-  -webkit-box-shadow: 0px 2px 4px #999;
-  -moz-box-shadow: 0px 2px 4px #999;
-  box-shadow: 0px 2px 4px #999; }
+  font-size: 1.2em; }
   .navbar-default .navbar-nav {
     float: none;
     text-align: center; }
     .navbar-default .navbar-nav li {
       display: inline-block;
       float: none; }
-      .navbar-default .navbar-nav li a, .navbar-default .navbar-nav li a:hover {
+      .navbar-default .navbar-nav li a, .navbar-default .navbar-nav li a:hover, .navbar-default .navbar-nav li a:focus {
         color: white; }
-    .navbar-default .navbar-nav li:hover {
-      background-color: #00c4c1; }
     .navbar-default .navbar-nav .active a, .navbar-default .navbar-nav .active a:hover {
       background-color: #008278;
       color: white; }
@@ -115,7 +123,7 @@ textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus {
   border-top-width: 0px; }
 
 #usuario:focus, #senha:focus {
-  border: 1px solid #00a79c;
+  border: 1px solid #3b5998;
   z-index: 100; }
 
 #btn-login {
@@ -125,7 +133,6 @@ textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus {
   height: 50px; }
 
 #logo-login {
-  background-image: url("../images/logo_nome.png");
   width: 100%;
   height: 50px;
   background-size: 20%;
@@ -143,41 +150,121 @@ textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus {
   text-align: center;
   font-size: 2em;
   position: relative;
-  box-shadow: 0px 2px 4px #999;
-  background-color: #00a79c;
+  background-color: #3b5998;
   color: white; }
 
 .botao-menu:hover {
   top: -10px;
-  box-shadow: 0px 12px 14px #999;
-  -webkit-transition: background-color 0.5s ease;
-  -moz-transition: background-color 0.5s ease;
-  -ms-transition: background-color 0.5s ease;
-  -o-transition: background-color 0.5s ease;
-  transition: background-color 0.5s ease;
-  background-color: #00c4c1;
-  cursor: pointer;
-  cursor: hand; }
+  box-shadow: 0px 12px 14px #999; }
 
 .botao-menu span {
   font-size: 2em;
   margin-bottom: 40px; }
-
-.form-control:focus {
-  box-shadow: none;
-  border: none; }
 
 .dropdown-menu {
   min-width: 200px;
   width: 97.5%; }
 
 .dropdown-menu li > a {
-  color: #00a79c; }
+  color: #3b5998; }
 
 .dropdown-menu .active > a:hover,
 .dropdown-menu .active > a:focus,
 .dropdown-menu .active > a {
-  background-color: #00c4c1;
+  background-color: #3b5998;
   color: white; }
+
+#formulario-orcamento {
+  /*background-color: white;*/
+  /*padding: 10px;*/ }
+
+#formulario-orcamento div {
+  padding: 4px 4px; }
+
+#formulario-orcamento h4 {
+  margin-top: 0;
+  margin-bottom: 0; }
+
+#formulario-orcamento table {
+  border: 2px solid #3b5998;
+  margin-bottom: 0px; }
+
+#formulario-orcamento thead tr:nth-child(1) {
+  background-color: #3b5998;
+  color: white; }
+
+#formulario-orcamento thead tr:nth-child(1) th {
+  border-bottom: none; }
+
+#tabela-orcamento tr:nth-child(even) {
+  background-color: #f0f0f0; }
+
+#formulario-orcamento h3 > a {
+  color: #3b5998; }
+
+#tabela-orcamento thead,
+#tabela-orcamento tbody,
+#tabela-orcamento tr,
+#tabela-orcamento td,
+#tabela-orcamento th {
+  display: block; }
+
+#tabela-orcamento a {
+  color: #3b5998; }
+
+#tabela-orcamento tr:after {
+  content: ' ';
+  display: block;
+  visibility: hidden;
+  clear: both; }
+
+#tabela-orcamento tbody {
+  height: 225px;
+  overflow-y: auto; }
+
+#tabela-orcamento tbody td,
+#tabela-orcamento thead th {
+  float: left; }
+
+th,
+td {
+  text-align: center; }
+
+#tabela-orcamento th:nth-child(1), #tabela-orcamento td:nth-child(1),
+#tabela-orcamento th:nth-child(3), #tabela-orcamento td:nth-child(3),
+#tabela-orcamento th:nth-child(4), #tabela-orcamento td:nth-child(4),
+#tabela-orcamento th:nth-child(5), #tabela-orcamento td:nth-child(5),
+#tabela-orcamento th:nth-child(6), #tabela-orcamento td:nth-child(6),
+#tabela-orcamento th:nth-child(7), #tabela-orcamento td:nth-child(7),
+#tabela-orcamento th:nth-child(8), #tabela-orcamento td:nth-child(8),
+#tabela-orcamento th:nth-child(9), #tabela-orcamento td:nth-child(9) {
+  width: 7.5%; }
+
+#tabela-orcamento th {
+  /*height: 60px;*/ }
+
+#tabela-orcamento th:nth-child(2), #tabela-orcamento td:nth-child(2) {
+  width: 40%; }
+
+#controle-tabela-orcamento {
+  /*border: solid 2px rgb(0, 167, 156);*/
+  /*background-color: rgb(0, 167, 156);*/
+  /*background-color: #f3f3f3;*/
+  /*margin-top: -2px;*/
+  /*padding-left: 0;*/
+  /*padding-right: 0;*/
+  /*background-color: #f3f3f3;*/ }
+
+#controle-tabela-orcamento .row {
+  margin-top: 0;
+  margin-bottom: 0; }
+
+.input-display[readonly] {
+  background-color: #3b5998;
+  font-size: 1.8em;
+  color: white;
+  text-align: center;
+  height: 50px;
+  border: none; }
 
 /*# sourceMappingURL=global.css.map */
