--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div id="titulo-login">
-        <alerta titulo="Aviso!" mensagem="main.erro" uib-collapse="main.erro"></alerta>
+        <alerta titulo="Aviso!" mensagem="login.erro" uib-collapse="login.erro"></alerta>
         <div id="logo-login"></div>
         <br>
         <h4>Digite seu nome de usuário e senha</h4>
@@ -9,7 +9,7 @@
             <h1><span class="glyphicon glyphicon-user"></span></h1>
             <input type="text" id="usuario" placeholder="Usuário" ng-model="username">
             <input type="password" id="senha" placeholder="Senha" ng-model="password">
-            <button id="btn-login" class="btn btn-default" ng-click="main.login()" >Login</button>
+            <button id="btn-login" class="btn btn-default" ng-click="login.login()" >Login</button>
         </div>
     </div>
 </div>
