--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -164,72 +164,50 @@ textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus, .btn:fo
 .dropdown-menu {
   min-width: 200px;
   width: 97.5%; }
-
-.dropdown-menu li > a {
-  color: #3b5998; }
-
-.dropdown-menu .active > a:hover,
-.dropdown-menu .active > a:focus,
-.dropdown-menu .active > a {
-  background-color: #3b5998;
-  color: white; }
-
-#formulario-orcamento {
-  /*background-color: white;*/
-  /*padding: 10px;*/ }
+  .dropdown-menu li > a {
+    color: #3b5998; }
+  .dropdown-menu .active a, .dropdown-menu .active a:hover, .dropdown-menu .active a:focus {
+    background-color: #3b5998;
+    color: white; }
 
 #formulario-orcamento div {
   padding: 4px 4px; }
-
 #formulario-orcamento h4 {
   margin-top: 0;
   margin-bottom: 0; }
-
+#formulario-orcamento h3 > a {
+  color: #3b5998; }
 #formulario-orcamento table {
   border: 2px solid #3b5998;
   margin-bottom: 0px; }
+  #formulario-orcamento table a {
+    color: #3b5998; }
+  #formulario-orcamento table thead {
+    background-color: #3b5998; }
+  #formulario-orcamento table th {
+    border-bottom: none;
+    background-color: #3b5998;
+    color: white;
+    text-align: center; }
+  #formulario-orcamento table td {
+    text-align: center; }
+  #formulario-orcamento table tr:nth-child(even) {
+    background-color: #f0f0f0; }
 
-#formulario-orcamento thead tr:nth-child(1) {
-  background-color: #3b5998;
-  color: white; }
-
-#formulario-orcamento thead tr:nth-child(1) th {
-  border-bottom: none; }
-
-#tabela-orcamento tr:nth-child(even) {
-  background-color: #f0f0f0; }
-
-#formulario-orcamento h3 > a {
-  color: #3b5998; }
-
-#tabela-orcamento thead,
-#tabela-orcamento tbody,
-#tabela-orcamento tr,
-#tabela-orcamento td,
-#tabela-orcamento th {
+#tabela-orcamento thead, #tabela-orcamento tbody, #tabela-orcamento tr, #tabela-orcamento td, #tabela-orcamento th {
   display: block; }
-
-#tabela-orcamento a {
-  color: #3b5998; }
-
+#tabela-orcamento thead tr {
+  padding-right: 18px; }
+#tabela-orcamento th, #tabela-orcamento td {
+  float: left; }
 #tabela-orcamento tr:after {
   content: ' ';
   display: block;
   visibility: hidden;
   clear: both; }
-
 #tabela-orcamento tbody {
   height: 225px;
-  overflow-y: auto; }
-
-#tabela-orcamento tbody td,
-#tabela-orcamento thead th {
-  float: left; }
-
-th,
-td {
-  text-align: center; }
-
+  overflow-y: scroll; }
 #tabela-orcamento th:nth-child(1), #tabela-orcamento td:nth-child(1),
 #tabela-orcamento th:nth-child(3), #tabela-orcamento td:nth-child(3),
 #tabela-orcamento th:nth-child(4), #tabela-orcamento td:nth-child(4),
@@ -239,21 +217,8 @@ td {
 #tabela-orcamento th:nth-child(8), #tabela-orcamento td:nth-child(8),
 #tabela-orcamento th:nth-child(9), #tabela-orcamento td:nth-child(9) {
   width: 7.5%; }
-
-#tabela-orcamento th {
-  /*height: 60px;*/ }
-
 #tabela-orcamento th:nth-child(2), #tabela-orcamento td:nth-child(2) {
   width: 40%; }
-
-#controle-tabela-orcamento {
-  /*border: solid 2px rgb(0, 167, 156);*/
-  /*background-color: rgb(0, 167, 156);*/
-  /*background-color: #f3f3f3;*/
-  /*margin-top: -2px;*/
-  /*padding-left: 0;*/
-  /*padding-right: 0;*/
-  /*background-color: #f3f3f3;*/ }
 
 #controle-tabela-orcamento .row {
   margin-top: 0;
