--- a/app/styles/_home.scss
+++ b/app/styles/_home.scss
@@ -1,5 +1,12 @@
 #menu-home {
   padding: 30px;
+
+  $y: 25%;
+  -webkit-transform: translateY($y);
+  -moz-transform: translateY($y);
+  -ms-transform: translateY($y);
+  -o-transform: translateY($y);
+  transform: translateY($y);
 }
 
 .botao-menu {
