--- a/app/styles/_login.scss
+++ b/app/styles/_login.scss
@@ -1,9 +1,14 @@
-#titulo-login {
+#login {
   text-align: center;
   color: #777;
+  -webkit-transform: translateY(50%);
+  -moz-transform: translateY(50%);
+  -ms-transform: translateY(50%);
+  -o-transform: translateY(50%);
+  transform: translateY(50%);
 }
 
-#login {
+#form-login {
 
   width: 340px;
   height: 320px;
@@ -59,10 +64,10 @@
 }
 
 #logo-login {
-  //background-image: url('../images/logo_nome.png');
+  background-image: url('../images/logo_nome.png');
   width: 100%;
   height: 50px;
-  background-size: 20%;
+  background-size: 15%;
   background-repeat: no-repeat;
   margin: 10px auto;
   background-position: center;
