--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -15,7 +15,7 @@ body {
   width: 100%;
   margin: 0 auto; }
 
-.center-absolute {
+.center-absolute, alerta {
   position: absolute;
   top: 0px;
   right: 0px;
@@ -46,7 +46,28 @@ textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus, .btn:fo
   border: 1px solid #3b5998;
   box-shadow: 0 0 6px #3b5998; }
 
+alerta {
+  text-align: center; }
+
+.tabela, #tabela-orcamento, #tabela-pagamento {
+  border: 2px solid #3b5998;
+  margin-bottom: 0px; }
+  .tabela a, #tabela-orcamento a, #tabela-pagamento a {
+    color: #3b5998; }
+  .tabela thead, #tabela-orcamento thead, #tabela-pagamento thead {
+    background-color: #3b5998; }
+  .tabela th, #tabela-orcamento th, #tabela-pagamento th {
+    border-bottom: none;
+    background-color: #3b5998;
+    color: white;
+    text-align: center; }
+  .tabela td, #tabela-orcamento td, #tabela-pagamento td {
+    text-align: center; }
+  .tabela tr:nth-child(even), #tabela-orcamento tr:nth-child(even), #tabela-pagamento tr:nth-child(even) {
+    background-color: #f0f0f0; }
+
 .banner {
+  background-image: url("../images/logotipo.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: 300px;
@@ -67,9 +88,11 @@ textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus, .btn:fo
     .navbar-default .navbar-nav li {
       display: inline-block;
       float: none; }
-      .navbar-default .navbar-nav li a, .navbar-default .navbar-nav li a:hover, .navbar-default .navbar-nav li a:focus {
+      .navbar-default .navbar-nav li a {
         color: white; }
-    .navbar-default .navbar-nav .active a, .navbar-default .navbar-nav .active a:hover {
+        .navbar-default .navbar-nav li a:hover, .navbar-default .navbar-nav li a:focus {
+          color: white; }
+    .navbar-default .navbar-nav .active a:hover {
       background-color: #008278;
       color: white; }
   .navbar-default .navbar-fixed-bottom {
@@ -82,18 +105,23 @@ textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus, .btn:fo
       border-top: 1px dashed white;
       border-bottom: 1px dashed white; }
 
-#titulo-login {
-  text-align: center;
-  color: #777; }
-
 #login {
+  text-align: center;
+  color: #777;
+  -webkit-transform: translateY(50%);
+  -moz-transform: translateY(50%);
+  -ms-transform: translateY(50%);
+  -o-transform: translateY(50%);
+  transform: translateY(50%); }
+
+#form-login {
   width: 340px;
   height: 320px;
   text-align: center;
   margin: auto;
   display: block;
   position: relative; }
-  #login input {
+  #form-login input {
     width: 100%;
     height: 50px;
     font-size: 1.4em;
@@ -133,15 +161,21 @@ textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus, .btn:fo
   height: 50px; }
 
 #logo-login {
+  background-image: url("../images/logo_nome.png");
   width: 100%;
   height: 50px;
-  background-size: 20%;
+  background-size: 15%;
   background-repeat: no-repeat;
   margin: 10px auto;
   background-position: center; }
 
 #menu-home {
-  padding: 30px; }
+  padding: 30px;
+  -webkit-transform: translateY(25%);
+  -moz-transform: translateY(25%);
+  -ms-transform: translateY(25%);
+  -o-transform: translateY(25%);
+  transform: translateY(25%); }
 
 .botao-menu {
   margin: 14px 0;
@@ -166,7 +200,7 @@ textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus, .btn:fo
   width: 97.5%; }
   .dropdown-menu li > a {
     color: #3b5998; }
-  .dropdown-menu .active a, .dropdown-menu .active a:hover, .dropdown-menu .active a:focus {
+  .dropdown-menu .active a a:hover, .dropdown-menu .active a a:focus {
     background-color: #3b5998;
     color: white; }
 
@@ -177,45 +211,26 @@ textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus, .btn:fo
   margin-bottom: 0; }
 #formulario-orcamento h3 > a {
   color: #3b5998; }
-#formulario-orcamento table {
-  border: 2px solid #3b5998;
-  margin-bottom: 0px; }
-  #formulario-orcamento table a {
-    color: #3b5998; }
-  #formulario-orcamento table thead {
-    background-color: #3b5998; }
-  #formulario-orcamento table th {
-    border-bottom: none;
-    background-color: #3b5998;
-    color: white;
-    text-align: center; }
-  #formulario-orcamento table td {
-    text-align: center; }
-  #formulario-orcamento table tr:nth-child(even) {
-    background-color: #f0f0f0; }
 
 #tabela-orcamento thead, #tabela-orcamento tbody, #tabela-orcamento tr, #tabela-orcamento td, #tabela-orcamento th {
   display: block; }
+#tabela-orcamento thead th {
+  float: left; }
 #tabela-orcamento thead tr {
   padding-right: 18px; }
-#tabela-orcamento th, #tabela-orcamento td {
-  float: left; }
+#tabela-orcamento tbody {
+  height: 225px;
+  overflow-y: scroll; }
+  #tabela-orcamento tbody tr {
+    min-width: 700px; }
+  #tabela-orcamento tbody td {
+    float: left; }
 #tabela-orcamento tr:after {
   content: ' ';
   display: block;
   visibility: hidden;
   clear: both; }
-#tabela-orcamento tbody {
-  height: 225px;
-  overflow-y: scroll; }
-#tabela-orcamento th:nth-child(1), #tabela-orcamento td:nth-child(1),
-#tabela-orcamento th:nth-child(3), #tabela-orcamento td:nth-child(3),
-#tabela-orcamento th:nth-child(4), #tabela-orcamento td:nth-child(4),
-#tabela-orcamento th:nth-child(5), #tabela-orcamento td:nth-child(5),
-#tabela-orcamento th:nth-child(6), #tabela-orcamento td:nth-child(6),
-#tabela-orcamento th:nth-child(7), #tabela-orcamento td:nth-child(7),
-#tabela-orcamento th:nth-child(8), #tabela-orcamento td:nth-child(8),
-#tabela-orcamento th:nth-child(9), #tabela-orcamento td:nth-child(9) {
+#tabela-orcamento th:nth-child(1), #tabela-orcamento th:nth-child(3), #tabela-orcamento th:nth-child(4), #tabela-orcamento th:nth-child(5), #tabela-orcamento th:nth-child(6), #tabela-orcamento th:nth-child(7), #tabela-orcamento th:nth-child(8), #tabela-orcamento th:nth-child(9), #tabela-orcamento td:nth-child(1), #tabela-orcamento td:nth-child(3), #tabela-orcamento td:nth-child(4), #tabela-orcamento td:nth-child(5), #tabela-orcamento td:nth-child(6), #tabela-orcamento td:nth-child(7), #tabela-orcamento td:nth-child(8), #tabela-orcamento td:nth-child(9) {
   width: 7.5%; }
 #tabela-orcamento th:nth-child(2), #tabela-orcamento td:nth-child(2) {
   width: 40%; }
