--- a/app/views/orcamento.html
+++ b/app/views/orcamento.html
@@ -156,7 +156,7 @@
     <div class="col-md-12">
       <div><h3 class="fonte-verde">Pagamento <a href=""><span class="glyphicon glyphicon-plus-sign"></span></a></h3></div>
       <div class="">
-        <table class="table">
+        <table class="table" id="tabela-pagamento">
           <thead>
             <tr>
               <th>Month</th>
