--- a/app/styles/_orcamento.scss
+++ b/app/styles/_orcamento.scss
@@ -12,9 +12,11 @@
   }
 
   .active {
-    a, a:hover, a:focus {
-      background-color: $cor-principal;
-      color: white;
+    a {
+      a:hover, a:focus {
+        background-color: $cor-principal;
+        color: white;
+      }
     }
   }
 }
@@ -29,77 +31,61 @@
     margin-bottom: 0;
   }
 
-  h3 > a {
-    color: $cor-principal;
-  }
-
-  table {
-    border: 2px solid $cor-principal;
-    margin-bottom: 0px;
-
-    a {
+  h3 {
+    > a {
       color: $cor-principal;
-    }
-
-    thead {
-      background-color: $cor-principal;
-    }
-
-    th {
-      border-bottom: none;
-      background-color: $cor-principal;
-      color: white;
-      text-align: center;
-    }
-
-    td {
-      text-align: center;
-    }
-
-    tr:nth-child(even) {
-      background-color: #f0f0f0;
     }
   }
 }
 
 #tabela-orcamento {
+  @extend .tabela;
+
   thead, tbody, tr, td, th {
     display: block;
   }
 
-  thead tr {
-    padding-right: 18px;
-  }
+  thead {
+    th {
+      float: left;
+    }
 
-  th, td {
-    float: left;
-  }
-
-  tr:after {
-    content: ' ';
-    display: block;
-    visibility: hidden;
-    clear: both;
+    tr {
+      padding-right: 18px;
+    }
   }
 
   tbody {
     height: 225px;
     overflow-y: scroll;
+
+    tr {
+      min-width: 700px;
+    }
+
+    td {
+      float: left;
+    }
   }
 
-  th:nth-child(1), td:nth-child(1),
-  th:nth-child(3), td:nth-child(3),
-  th:nth-child(4), td:nth-child(4),
-  th:nth-child(5), td:nth-child(5),
-  th:nth-child(6), td:nth-child(6),
-  th:nth-child(7), td:nth-child(7),
-  th:nth-child(8), td:nth-child(8),
-  th:nth-child(9), td:nth-child(9) {
-    width: 7.5%;
+  tr {
+    &:after {
+      content: ' ';
+      display: block;
+      visibility: hidden;
+      clear: both;
+    }
   }
 
-  th:nth-child(2), td:nth-child(2) {
-    width: 40%;
+  th, td {
+    &:nth-child(1), &:nth-child(3), &:nth-child(4), &:nth-child(5),
+    &:nth-child(6), &:nth-child(7), &:nth-child(8), &:nth-child(9) {
+      width: 7.5%;
+    }
+
+    &:nth-child(2) {
+      width: 40%;
+    }
   }
 }
 
@@ -115,4 +101,8 @@
   text-align: center;
   height: 50px;
   border: none;
+}
+
+#tabela-pagamento {
+  @extend .tabela;
 }
