--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,5 +1,5 @@
 <alerta titulo="Aviso!" mensagem="{{login.erro}}" uib-collapse="{{login.erro}}"></alerta>
-<div class="row">
+<div class="center-absolute">
     <div id="login">
         <div id="logo-login"></div>
         <br>
