--- a/app/views/orcamento.html
+++ b/app/views/orcamento.html
@@ -56,7 +56,7 @@
       <div class="col-xs-3 col-sm-2">
         <div><h4 class="fonte-verde">Código</h4></div>
         <div class="input-group">
-          <input type="text" class="form-control" placeholder="Código" aria-describedby="basic-addon2">
+          <input type="text" class="form-control" placeholder="Código" aria-describedby="basic-addon2" ng-model="cdProduto" press-enter="orcamento.buscaCodigo(cdProduto)">
           <span class="input-group-btn">
             <button class="btn btn-default" tabindex="-1"><span class="glyphicon glyphicon-search"></span></button>
           </span>
@@ -65,7 +65,13 @@
       <div class="col-xs-5 col-sm-7">
         <div><h4 class="fonte-verde">Descrição</h4></div>
         <div>
-          <input type="text" class="form-control" ng-model="descricao" uib-typeahead="produto as produto.NmProduto for produto in buscaDescricao($viewValue)" typeahead-template-url="../partials/produtosTypeaheadPopup.html" typeahead-min-length="3" typeahead-loading="carregandoProdutos" required>
+          <input type="text" class="form-control" ng-model="nmProduto"
+                 uib-typeahead="produto as produto.NmProduto for produto in orcamento.buscaDescricao($viewValue)"
+                 typeahead-template-url="../partials/produtosTypeaheadPopup.html"
+                 typeahead-min-length="3"
+                 typeahead-loading="orcamento.carregandoProdutos"
+                 typeahead-wait-ms="100";
+                 typeahead-on-select="orcamento.selectProduto($item); asyncSelected = '';" required>
         </div>
       </div>
       <div class="col-xs-4 col-sm-3">
