--- a/app/views/orcamento.html
+++ b/app/views/orcamento.html
@@ -84,7 +84,7 @@
       <div class="col-xs-3 col-sm-3">
         <div><h4>Quantidade</h4></div>
         <div class="input-group">
-          <input type="number" class="form-control" ng-model="produto.quantidade" ng-change="orcamento.recalcular()">
+          <input type="number" class="form-control" ng-model="produto.quantidade" ng-change="orcamento.recalcular('quantidade')" press-enter="">
           <span class="input-group-addon" ng-if="produto.unidade">{{produto.unidade}}</span>
           <span class="input-group-addon" ng-if="!produto.unidade">(un)</span>
         </div>
