--- a/app/partials/header.html
+++ b/app/partials/header.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="collapse navbar-collapse" id="menu-collapse">
-      <ul class="nav navbar-nav nav-center">
+      <ul class="nav navbar-nav nav-center" tabindex="-1">
         <li><a ng-href="#/home"><span class="glyphicon glyphicon-home"></span> Home</a></li>
         <li><a ng-href="#/orcamento"><span class="glyphicon glyphicon-shopping-cart"></span> Orçamento</a></li>
         <li><a ng-href="#"><span class="glyphicon glyphicon-user"></span> Clientes</a></li>
