--- a/app/styles/_orcamento.scss
+++ b/app/styles/_orcamento.scss
@@ -8,21 +8,21 @@
   width: 97.5%;
 
   li > a {
-    color: $cor-principal;
+    color: $cor-principal-clara;
 
     &:hover, &:focus {
-      background-color: $cor-principal;
+      background-color: $cor-principal-clara;
       color: white;
     }
   }
 
   > .active {
     a {
-      background-color: $cor-principal;
+      background-color: $cor-principal-clara;
       color: white;
 
       &:hover, &:focus {
-        background-color: $cor-principal;
+        background-color: $cor-principal-clara;
         color: white;
       }
     }
@@ -38,13 +38,25 @@
   h4 {
     margin-top: 0;
     margin-bottom: 0;
-    color: $cor-principal;
+    color: $cor-principal-clara;
   }
 
-  h3 {
-    color: $cor-principal;
-    > a {
-      color: $cor-principal;
+  .head {
+    color: white;
+    background-color: $cor-principal-clara;
+    cursor: hand;
+    cursor: pointer;
+
+    h3 {
+      margin: 10px;
+    }
+
+    a {
+      color: white;
+    }
+
+    .glyphicon-menu-up, .glyphicon-menu-down {
+      float: right;
     }
   }
 
@@ -112,7 +124,7 @@
 }
 
 .input-display[readonly] {
-  background-color: $cor-principal;
+  background-color: $cor-principal-clara;
   font-size: 1.8em;
   color: white;
   text-align: center;
